--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MyNeoCare</title>
+  <script type="text/javascript">
+        // Function to perform the redirect
+        function redirectToExample() {
+            window.location.href = 'https://topmate.io/myneocare';
+        }
+
+        window.onload = function() {
+            setTimeout(redirectToExample, 0);
+        }
+  </script>
 </head>
 <body>
   <p>MyNeoCare</p>
